--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
+        "mopo922/laravel-treats": "^2.0",
         "tcg/voyager": "dev-1.x-dev"
     },
     "require-dev": {
