--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "tcg/voyager": "dev-1.x-dev"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
