--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@prettier/plugin-php": "prettier/plugin-php",
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "browser-sync": "^2.23.6",
@@ -19,6 +20,7 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.14.1",
+        "prettier": "prettier/prettier",
         "vue": "^2.5.15",
         "vue-template-compiler": "^2.5.15"
     },
