# Good-bye, npm. Hello, yarn. #
* Fixing all problems with `Node.js`, `npm`, and `yarn` by eliminating `npm` from the workflow _entirely_. Now only using `yarn`.

Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
         "bootstrap": "^4.1.1",
         "browser-sync": "^2.24.4",
         "browser-sync-webpack-plugin": "^2.2.2",
-        "cross-env": "^5.1.6",
+        "cross-env": "^5.2",
         "jquery": "^3.2",
         "laravel-mix": "^2.1.11",
         "lodash": "^4.17.10",
-        "popper.js": "^1.14.1",
-        "prettier": "prettier/prettier",
+        "popper.js": "^1.14.3",
+        "prettier": "github:prettier/prettier",
         "vue": "^2.5.16",
         "vue-template-compiler": "^2.5.16"
     },
