--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
         "browser-sync": "^2.24.6",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.2.0",
+        "imagemin": "^6.1.0",
         "jquery": "^3.2",
-        "laravel-mix": "^2.1.11",
+        "laravel-mix": "^4.0.15",
         "lodash": "^4.17.10",
         "popper.js": "^1.14.3",
         "prettier": "^1.14",
+        "resolve-url-loader": "2.3.1",
+        "sass": "^1.18.0",
+        "sass-loader": "7.*",
         "vue": "^2.5.16",
-        "vue-template-compiler": "^2.5.16"
+        "vue-template-compiler": "^2.5.16",
+        "webpack": "^4.30.0"
     },
     "dependencies": {
         "retinajs": "^2.1.3"
