--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "type": "project",
   "require": {
     "php": "7.2.*",
-    "doctrine/dbal": "2.7.*",
+    "doctrine/dbal": "^2.7.0",
     "fideloper/proxy": "~4.0",
     "laravel/framework": "5.8.*",
     "laravel/tinker": "~1.0",
