--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,9 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+# Sonarlint
+sonarlint/
+
 
 ### Laravel template
 #vendor/
