--- a/docker-config/haproxy/haproxy.cfg
+++ b/docker-config/haproxy/haproxy.cfg
@@ -24,7 +24,7 @@ backend acs
   http-request add-header X-Forwarded-Proto https if { ssl_fc }
   option httpchk HEAD / HTTP/1.1
   http-check send hdr Host localhost
-  server acs acs:80 check
+  server acs-01 acs:80 check
 
 listen stats
   bind *:1936
