--- a/package.json
+++ b/package.json
@@ -1,4 +1,25 @@
 {
+  "name": "acs",
+  "description": "[![Build Status](https://travis-ci.org/skyunlimitedinc/acs.svg?branch=master)](https://travis-ci.org/skyunlimitedinc/acs)",
+  "version": "2020.8.0",
+  "main": "webpack.mix.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skyunlimitedinc/acs.git"
+  },
+  "keywords": [
+    "laravel",
+    "voyager"
+  ],
+  "author": "Chris McGee",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/skyunlimitedinc/acs/issues"
+  },
+  "homepage": "https://github.com/skyunlimitedinc/acs#readme",
   "private": true,
   "scripts": {
     "dev": "npm run development",
