--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,17 +8,17 @@ services:
     container_name: balancer
     restart: unless-stopped
     volumes:
-      - ./docker-config/haproxy:/usr/local/etc/haproxy:ro
+      - "~/web/config/haproxy:/usr/local/etc/haproxy:ro"
     networks:
       - web
     ports:
-      - 8080:80
-      - 4443:443
-      - 1936:1936
+      - "80:80"
+      - "443:443"
+      - "1936:1936"
     depends_on:
       - acs
 
-  # Laravel app (Apache & PHP services with Laravel)
+  # American Cabin Supply site (Apache & PHP services with Laravel)
   acs:
     build:
       args:
@@ -33,27 +33,23 @@ services:
     depends_on:
       - acsays-db
     ports:
-      - 8082:80
-      - 4544:443
+      - "8082:80"
+      - "4544:443"
     networks:
       - web
 
-  # MySQL Service
+  # MySQL Service for the ACS and AYS sites' databases
   acsays-db:
     image: mysql:5.7.29
     container_name: acsays-db
     restart: unless-stopped
     ports:
-      - 3316:3306
+      - "3326:3306"
     environment:
-      MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_RANDOM_ROOT_PASSWORD: "yes"
       MYSQL_ONETIME_PASSWORD: "yes"
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - dbdata:/var/lib/mysql
-      - ./docker-config/mysql/my.cnf:/etc/mysql/my.cnf
+      - acsays-dbdata:/var/lib/mysql
     networks:
       - web
 
@@ -61,8 +57,13 @@ services:
 networks:
   web:
     driver: bridge
+    name: web
 
 # Volumes
 volumes:
-  dbdata:
+  acsays-dbdata:
     driver: local
+    name: acsays-dbdata
+  redis-data:
+    driver: local
+    name: redis-data
