:construction: Possibly accept two branches for deployment
Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ deploy:
     script: bash scripts/deploy.sh
     on:
       repo: skyunlimitedinc/acs
-      branch: master
+      branch: master,main
