:construction_worker: Set deployment to run from two branches
Signed-off-by: Chris McGee <chris@chrismcgee.info>

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,6 @@ deploy:
     script: bash scripts/deploy.sh
     on:
       repo: skyunlimitedinc/acs
-      branch: master,main
+      branch:
+        - master
+        - main
